--- a/public/style.css
+++ b/public/style.css
@@ -1,29 +1,61 @@
-.name::before{
-  content: "Название: ";
-  color: gray;
+  
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond&family=Poppins:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond&family=Poppins:wght@500&family=Russo+One&display=swap');
+
+
+
+header{
+  display: flex;
+  justify-content: center;
+}
+h1{
+    font-family: 'EB Garamond', serif;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Russo One', sans-serif;
+}
+
+header{
+    margin: 3%;
+}
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1%;
+    background-color: white;
+    margin-right: 20%;
+    margin-left: 20%;
+    border: 5px solid rgb(2, 54, 224);
+
+}
+ 
+label{
+    margin: 1%;
+    font-family: 'EB Garamond', serif;
+    font-family: 'Poppins', sans-serif;
+    font-size:medium; 
+}
+
+
+input[type=checkbox]:checked + label.strikethrough{
+  text-decoration: line-through;
+}
+
+span{
+      color:red;
   }
-  .style::before{
-  content: "Стиль: ";
-  color: gray;
-  }
-  .wall_material::before{
-  content: "Материал стен: ";
-  color: gray;
-  }
-   
-  .square::before{
-  content: "Общая площадь: ";
-  color: gray;
-  }
-  .square::after, .living_space::after{
-  content: " кв. м.";
-  color: gray;
-  }
-  .floors::before{
-  content: "Этажи: ";
-  color: gray;
-  }
-  .living_space::before{
-  content: "Жилая площадь: ";
-  color: gray;
+
+input{
+      display: block;
+      padding: 1%;
+      border: 1px solid black;
+      border-radius: 5px;    
+}
+  
+  footer{
+    position: absolute;
+    left: 3%;
+    bottom: 0;
+    width: 100%;
+    height: 8%;
   }
